Fix dark mode for cantstopexpress, stonespinearchitects and reflection

--- a/src/css/games/cantstopexpress.less
+++ b/src/css/games/cantstopexpress.less
@@ -6,7 +6,7 @@ html[data-theme=dark] {
 	}
 
 	.pad {
-		filter: invert(0.8) grayscale(1);
+		filter: invert(1) hue-rotate(180deg) brightness(0.9);
 	}
 
 	.containermepad>h1 {
